<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        style="?android:listSeparatorTextViewStyle"/>

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/crime_default_button_margin"
        android:layout_marginRight="@dimen/crime_default_button_margin"/>

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/crime_default_button_margin"
        android:layout_marginRight="@dimen/crime_default_button_margin"
        android:text="@string/crime_solved_label"/>

    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/crime_default_button_margin"
        android:layout_marginEnd="@dimen/crime_default_button_margin"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text"/>

    <Button
        android:id="@+id/call_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/crime_default_button_margin"
        android:layout_marginEnd="@dimen/crime_default_button_margin"
        android:text="@string/call_suspect"/>

    <Button
        android:id="@+id/crime_report_button"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/crime_default_button_margin"
        android:layout_marginEnd="@dimen/crime_default_button_margin"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text"/>

    <Button
        android:id="@+id/delete_crime_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/crime_default_button_margin"
        android:layout_marginTop="@dimen/delete_button_margin_top"
        android:text="@string/delete_button_text"
        tools:text="Delete"/>


</LinearLayout>